--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
-  "name": "dropdown-menu",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --watch"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/MetalSnow/Dropdown-menu-image-carousel.git"
+    "dev": "webpack serve --config webpack.dev.js",
+    "build": "webpack --config webpack.prod.js",
+    "deploy": "git subtree push --prefix dist origin gh-pages"
   },
   "author": "Metal",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/MetalSnow/Dropdown-menu-image-carousel/issues"
-  },
-  "homepage": "https://github.com/MetalSnow/Dropdown-menu-image-carousel#readme",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
     "@eslint/js": "^9.4.0",
+    "babel-jest": "^29.7.0",
     "css-loader": "^7.1.2",
     "eslint": "^9.4.0",
     "file-loader": "^6.2.0",
@@ -27,9 +24,8 @@
     "html-webpack-plugin": "^5.6.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4"
-  },
-  "dependencies": {
-    "@metalsnow/dropdown-toggle-package": "^1.0.0"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^5.0.4",
+    "webpack-merge": "^6.0.1"
   }
 }
